# artnet-rs

./: Cargo.toml
examples/: client.rs  server.rs
src/: lib.rs
src/client/: mod.rs
src/protocol/: header.rs  mod.rs  op_codes.rs  packet.rs
src/protocol/packets/: dmx.rs  mod.rs
src/server/: mod.rs
